<resources>
    <string name="app_name">Assignment</string>
    <string name="upcoming_movies">Upcoming movies</string>
    <string name="ok">OK</string>
    <string name="loading">Loading</string>
    <string name="please_wait">please wait...</string>
    <string name="font_lato_light">Lato-Light.ttf</string>
    <string name="font_lato_regular">Lato-Regular.ttf</string>
    <string name="font_lato_bold">Lato-Bold.ttf</string>
    <string name="developed_by">Developed By \nAvez Raj</string>
    <string name="information">Information</string>
</resources>
