<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mobisys.android.upcoming_movies.assignment.activity.InfoActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/toolbar_background"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/toolbar_background">
            <com.mobisys.android.upcoming_movies.assignment.widget.StyleableTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/information"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>
    <com.mobisys.android.upcoming_movies.assignment.widget.StyleableTextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/developed_by"
        android:textSize="30dp"
        app:font="@string/font_lato_bold" />
</RelativeLayout>
