<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/mainlayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:visibility="gone">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/toolbar_background"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/toolbar_background">
            <com.mobisys.android.upcoming_movies.assignment.widget.StyleableTextView
                android:id="@+id/txt_center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/upcoming_movies"
                app:font="@string/font_lato_bold"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="17sp" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">
            <android.support.v4.view.ViewPager
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_margin="8dp"
                android:layout_weight="1.8" />
            <com.viewpagerindicator.CirclePageIndicator
                android:id="@+id/indicator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dip"
                app:fillColor="@android:color/black"
                app:strokeColor="@android:color/black" />
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <com.mobisys.android.upcoming_movies.assignment.widget.StyleableTextView
                        android:id="@+id/txtTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/customedit"
                        android:gravity="center|left"
                        android:padding="5dp"
                        android:text="title"
                        app:font="@string/font_lato_regular"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/black" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="vertical">
                    <com.mobisys.android.upcoming_movies.assignment.widget.StyleableTextView
                        android:id="@+id/txtOverview"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/customedit"
                        android:gravity="start"
                        android:padding="5dp"
                        app:font="@string/font_lato_regular"
                        android:scrollbars="vertical"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#000000" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.8"
                    android:background="@drawable/customedit"
                    android:gravity="center"
                    android:orientation="vertical">
                    <RatingBar
                        android:id="@+id/ratingBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:isIndicator="true"
                        android:numStars="5" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>